email validation added

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -19,17 +19,14 @@ html {
 body {
     max-width: 90rem;
     margin: 3.125rem auto;
-    
     font-family: 'Josefin Sans', sans-serif;
     font-size: 1rem;
 
 }
 
 .text-content {
-    /* padding: 5rem 0 5rem 5rem; */
     /* background-image: url("/images/bg-pattern-desktop.svg"); */
     background-size: cover;
-    /* margin-right: 6.25rem; */
 }
 
 .intro {
@@ -37,7 +34,6 @@ body {
     font-size: 3rem;
     letter-spacing: 0.5rem;
 }
-
 
 .msg {
     word-spacing: 0.5rem;
@@ -57,12 +53,10 @@ input {
     border: 1px solid grey;
     border-radius: 2.5rem;
     outline: none;
-
 }
 
 ::placeholder {
     color: var(--pry-clr);
-
 }
 
 input:focus {
@@ -80,8 +74,8 @@ input:focus {
 
 
 /* Media query for mobile*/
+/* Breakpoint from 511px and below for mobile devices */
 @media(max-width: 31.9375rem) {
-
 
     body {
         display: block;
@@ -94,19 +88,20 @@ input:focus {
         margin: 2.2rem;
     }
 
-    /* hides brand logo for desktop view when in mobile */
+    /* hides brand logo for desktop when in mobile view */
     .brand-logo-desktop {
         display: none;
     }
 
-    /* hides hero image when im mobile */
-
+    /* hides hero image when im mobile view */
     .hero-desktop {
         display: none;
     }
 
     .hero-mobile {
         display: block;
+
+        /* width set to 100% to make image go from end to end and respond to every resolution */
         width: 100%;
     }
 
@@ -135,6 +130,7 @@ input:focus {
 
     input {
         /* Giving the inputs width a value of 100% makes it responsive on all mobile devices */
+        /* It also allows it go from end to end */
         width: 100%;
         margin-top: 1rem;
     }
@@ -143,8 +139,6 @@ input:focus {
         position: relative;
         top: 0.5rem;
         right: 5.5rem;
-        /* margin-top: 2rem; */
-        /* margin-right: 8rem; */
     }
 
     .btn {
@@ -179,7 +173,6 @@ input:focus {
         width: 100%;
     }
 
-    
     .text-content {
         text-align: center;
         margin: -4rem 2rem 6rem 2rem;
@@ -198,11 +191,11 @@ input:focus {
     }
 
     input {
-        padding: 20px 30px;
+        padding: 1.25rem 1.875rem;
     }
 
     .btn {
-        padding: 20px 60px;
+        padding: 1.25rem 3.75rem;
     }
 
     .error {
@@ -218,21 +211,20 @@ input:focus {
         margin-top: 1.8rem;
     }
 
-
 }
 
 
 /* media query for large screen from 1282px and above */
+/* media query for desktop and smart tv's */
 @media(min-width: 77.5rem) {
 
     body {
         display: flex;
-       flex-direction: row-reverse;
+        flex-direction: row-reverse;
     }
 
     .text-content {
         padding: 5rem 0 5rem 5rem;
-        /* background-image: url("/images/bg-pattern-desktop.svg"); */
         background-size: cover;
         margin-right: 6.25rem;
     }
@@ -242,7 +234,6 @@ input:focus {
         font-size: 3rem;
         letter-spacing: 0.5rem;
     }
-    
     
     .msg {
         word-spacing: 0.5rem;
@@ -272,7 +263,6 @@ input:focus {
         border: 1px solid grey;
         border-radius: 2.5rem;
         outline: none;
-    
     }
 
     input:focus {
@@ -288,8 +278,6 @@ input:focus {
         position: relative;
         top: 0.9rem;
         right: 5.5rem;
-        /* margin-top: 2rem; */
-        /* margin-right: 8rem; */
     }
 
     .btn {
@@ -305,10 +293,8 @@ input:focus {
     }
     
     .btn:hover {
-        transform: scale(1.2) !important;
+        transform: scale(1.1);
     }
-    
-    
-
 }
+
 
